RESOLVED FIXED319512
[GFC][Integration] Grids cannot contribute baselines currently
https://bugs.webkit.org/show_bug.cgi?id=319512
Summary [GFC][Integration] Grids cannot contribute baselines currently
Sammy Gill
Reported 2026-07-15 10:06:30 PDT
We currently cannot provide a baseline for a grid so we need to make sure we do not take GFC if it is. We currently do so if the grid's display is inline but we also need to check its self alignment
Attachments
Radar WebKit Bug Importer
Comment 1 2026-07-15 10:06:43 PDT
Sammy Gill
Comment 2 2026-07-15 10:11:54 PDT
EWS
Comment 3 2026-07-15 11:08:09 PDT
Committed 317257@main (956aa60e5533): <https://commits.webkit.org/317257@main> Reviewed commits have been landed. Closing PR #69493 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.