[GFC][Integration] Grids cannot contribute baselines currently https://bugs.webkit.org/show_bug.cgi?id=319512 rdar://182319810

Reviewed by Alan Baradlay.

The grid formatting context integration cannot produce a baseline for a
grid yet, so grid layout coverage already bails out of GFC for
inline-grid, which needs to contribute a baseline to its parent's inline
layout.

A grid is also asked for its baseline when it is itself an item whose
resolved self-alignment is a baseline value (first or last). Extend the
coverage check to avoid GFC when the grid's resolved justify-self (inline
axis) or align-self (block axis) is a baseline position.

Canonical link: https://commits.webkit.org/317257@main